# SDO

./: Cargo.toml  Dockerfile  OPTE6_20201028.eds  Readme.md  docker-compose.yml
src/: eds_parser.rs  main.rs  sdo_handler.rs
tests/: integration.rs
