[package]
name = "sdo-rust-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
rust-ini = "0.20"
embedded-can = "0.4.1"
socketcan = { version = "3.5.0", optional = true }

[dev-dependencies]
tempfile = "3.10"